--- a/ceram.Rmd
+++ b/ceram.Rmd
@@ -135,7 +135,7 @@ Jaśniej niż tysiąc słońc: Losy badaczy atomu (Jungk Robert (właśc. Baum R
 
 + Jesień średniowiecza (Huizinga Johan)
 
-Kair (Raymond André)
++ Kair (Raymond André)
 
 Katarzy (Barber Malcolm) 
 
@@ -167,7 +167,7 @@ Maorysi z Nowej Zelandii (Metge Joan)
 
 + Masynissa (Kotula Tadeusz)
 
-Mazagan: Miasto które przepłynęło Atlantyk (Vidal Laurent) 
++ Mazagan: Miasto które przepłynęło Atlantyk (Vidal Laurent) 
 
 Meksyk przed konkwistą (Olko Justyna) 
 
@@ -235,7 +235,7 @@ Piramidy Egiptu (Edwards Iorwerth Eiddon Stephen)
 
 + Pokażcie mi testament Adama: Na szlakach nowożytnych odkryć geograficznych (Herrmann Paul) 
 
-Pokolenia w niewoli: Historia niewolnictwa w Ameryce Północnej (Berlin Ira) 
++ Pokolenia w niewoli: Historia niewolnictwa w Ameryce Północnej (Berlin Ira) 
 
 Polowania na czarownice: Dzieje prześladowań czarownic w Europie i Ameryce Północnej (Thurston Robert) 
 
