--- a/ceram.Rmd
+++ b/ceram.Rmd
@@ -73,7 +73,7 @@ Dzieje chrześcijaństwa na Litwie (Ališauskas Vytautas, Baronas Darius, Paknys
 
 Dzieje Cyganów (Fraser Angus)
 
-Dzieje dawnego Izraela (Grant Michael (1914-2004))
++ Dzieje dawnego Izraela (Grant Michael (1914-2004))
 
 + Dzieje dawnych Turków (Gumilow Lew)
 
