--- a/ceram.Rmd
+++ b/ceram.Rmd
@@ -45,7 +45,7 @@ Cywilizacja chińska (Granet Marcel)
 
 Cywilizacja islamu (Sourdel Janine, Sourdel Dominique)
 
-Cywilizacja Odrodzenia (Delumeau Jean)
++ Cywilizacja Odrodzenia (Delumeau Jean)
 
 + Cywilizacja wczesnego chrześcijaństwa I-IV w. (Simon Marcel) 
 
@@ -63,9 +63,9 @@ Człowiek i śmierć (Ariès Philippe)
 
 Dakowie (Daicoviciu Hadrian)
 
-Dawna Gruzja (Lang David Marshall)
++ Dawna Gruzja (Lang David Marshall)
 
-Dawna kultura Japonii (Jofan Natalia)
++ Dawna kultura Japonii (Jofan Natalia)
 
 + Dawni Mongołowie (Kałużyński Stanisław)
 
@@ -359,7 +359,7 @@ Z powrotem na Ziemię: Spór o pochodzenie cywilizacji ludzkich (praca zbiorowa 
 
 + Zapomniany świat Sumerów (Bielicki Marian Leon (pseud. Lemar Stefan)) 
 
-Ze świata Celtów (Dillon Myles, Chadwick Nora K.) 
++ Ze świata Celtów (Dillon Myles, Chadwick Nora K.) 
 
 Złota gałąź: Studia z magii i religii (Frazer James George)
 
