--- a/ceram.Rmd
+++ b/ceram.Rmd
@@ -149,7 +149,7 @@ Król tańczył na targowisku (Gillmor Frances)
 
 Księga wychodzenia za dnia: Tajemnice egipskiej księgi umarłych (Barwik Mirosław) 
 
-Kultura starobułgarska (Waklinow Stanczo)
++ Kultura starobułgarska (Waklinow Stanczo)
 
 + Kultura Wysp Cykladzkich w epoce brązu (Press Ludwika)
 
@@ -161,7 +161,7 @@ Lud faraonów: Od wieśniaka do dworzanina (Wilson Hilary)
 
 + Magia i wróżbiarstwo u Hetytów (Popko Maciej) 
 
-Malarstwo etruskie (Dobrowolski Witold)
++ Malarstwo etruskie (Dobrowolski Witold)
 
 Maorysi z Nowej Zelandii (Metge Joan) 
 
