--- a/ceram.Rmd
+++ b/ceram.Rmd
@@ -61,7 +61,7 @@ Czasy Konstantyna Wielkiego (Burckhardt Jakób (Burckhardt Jacob))
 
 Człowiek i śmierć (Ariès Philippe) 
 
-Dakowie (Daicoviciu Hadrian)
++ Dakowie (Daicoviciu Hadrian)
 
 + Dawna Gruzja (Lang David Marshall)
 
@@ -277,7 +277,7 @@ Siedem cudów świata (Romer John, Romer Elizabeth)
 
 + Smutek tropików (Lévi-Strauss Claude)  
 
-Spadkobiercy: Opowieść o człowieku i stworzonym przez niego świecie (Calder Ritchie (właśc. Ritchie Calder Peter))
++ Spadkobiercy: Opowieść o człowieku i stworzonym przez niego świecie (Calder Ritchie (właśc. Ritchie Calder Peter))
 
 Społeczeństwo feudalne (Bloch Marc) 
 
