--- a/ceram.Rmd
+++ b/ceram.Rmd
@@ -203,7 +203,7 @@ Narodziny weneckiego imperium kolonialnego (Sokołow Nikołaj)
 
 Nowożytna historia Japonii: Od czasów Tokugawów do współczesności (Gordon Andrew) 
 
-Obrazy Włoch (Muratow Paweł)
++ Obrazy Włoch (Muratow Paweł)
 
 Od Olimpii do Niniwy w epoce Homera (Riemschneider Margarete) 
 
@@ -289,7 +289,7 @@ Starożytni Celtowie (Cunliffe Barry)
 
 Starożytni olimpijczycy (Miller Stephen G.) 
 
-Starożytny Egipt: Anatomia cywilizacji (Kemp Barry J.) 
++ Starożytny Egipt: Anatomia cywilizacji (Kemp Barry J.) 
 
 Starzy i nowi bogowie Japonii (Arutjunow Siergiej, Swietłow Gieorgij) 
 
@@ -351,7 +351,7 @@ Wikingowie Pacyfiku (Buck Peter Henry)
 
 + Z kraju królowej Saby (Pankhurst Sylvia)
 
-Z powrotem na Ziemię: Spór o pochodzenie cywilizacji ludzkich (praca zbiorowa / wielu autorów) 
++ Z powrotem na Ziemię: Spór o pochodzenie cywilizacji ludzkich (praca zbiorowa / wielu autorów) 
 
 + Zagadki Maroka (Mazel Jean)
 
