--- a/ceram.Rmd
+++ b/ceram.Rmd
@@ -41,7 +41,7 @@ Chiny: Zarys historii kultury (Fitzgerald Charles Patrick)
 
 Cień Minotaura (Ciechanowicz Jerzy)
 
-Cywilizacja chińska (Granet Marcel)
++ Cywilizacja chińska (Granet Marcel)
 
 Cywilizacja islamu (Sourdel Janine, Sourdel Dominique)
 
@@ -219,7 +219,7 @@ Panorama średniowiecznej Anglii (Coulton George Gordon)
 
 + Pawi Tron: Dramat Indii Wielkich Mogołów (Hansen Waldemar) 
 
-Pierwotni mieszkańcy Australii (Rose Frederick) 
++ Pierwotni mieszkańcy Australii (Rose Frederick) 
 
 Pierwsze słowo: Narodziny mowy i pisma (Kuckenburg Martin)  
 
@@ -293,7 +293,7 @@ Starożytni olimpijczycy (Miller Stephen G.)
 
 Starzy i nowi bogowie Japonii (Arutjunow Siergiej, Swietłow Gieorgij) 
 
-Strażnicy złota (Albaum L. I., Brentjes B.)
++ Strażnicy złota (Albaum L. I., Brentjes B.)
 
 Szlak mirry i kadzidła (Scheck Frank Rainer) 
 
@@ -329,7 +329,7 @@ Upadek Rzymu (Vogt Joseph)
 
 W niebo wpatrzeni (Ley Willy) 
 
-W poszukiwaniu przodków człowieka (Łariczew Witalij)
++ W poszukiwaniu przodków człowieka (Łariczew Witalij)
 
 + Wandalowie i ich afrykańskie państwo (Strzelczyk Jerzy) 
 
