--- a/art.Rmd
+++ b/art.Rmd
@@ -6,13 +6,19 @@
 
 * Rudolf Drossler Wenus epoki lodowcowej
 
+* Douglas Fraser Sztuka prymitywna
+
 * Peter S. Garlake Wielkie Zimbabwe
+
+* Michał Gawlikowski Sztuka Syrii
 
 * Bernhard Jacobi Tajemnice świątyń i pałaców
 
 * E. Jastrzębowska Sztuka wczesnochrześcijańska
 
 * A. Mierzejewski Sztuka starożytnego wschodu 1, 2
+
+* Jolanta Młynarszyk Sztuka Cypru
 
 * Austen Henry Layard W poszukiwaniu Niniwy
 
