--- a/ceram.Rmd
+++ b/ceram.Rmd
@@ -117,9 +117,9 @@ Historia wychowania w starożytności (Marrou Henri Irenée)
 
 Hunowie (Thompson Edward Arthur)
 
-Huryci (Popko Maciej)
++ Huryci (Popko Maciej)
 
-Indianie z Meksyku (Benitez Fernando)
++ Indianie z Meksyku (Benitez Fernando)
 
 + Indie: Od początku dziejów do podboju muzułmańskiego (Basham Arthur L. (Basham Arthur Llewellyn))
 
@@ -245,7 +245,7 @@ Polowania na czarownice: Dzieje prześladowań czarownic w Europie i Ameryce Pó
 
 Prawdziwa historia czekolady (Coe Sophie D., Coe Michael D.) 
 
-Przemysł polski w dawnych wiekach (Bocheński Aleksander) 
++ Przemysł polski w dawnych wiekach (Bocheński Aleksander) 
 
 Ramzes Wielki i jego czasy (Kitchen Kenneth) 
 
@@ -261,9 +261,9 @@ Rycerstwo (Keen Maurice)
 
 + Rzym: Ludzie i budowle (Ciechanowicz Jerzy) 
 
-Samuraje (Śpiewakowski Aleksander) 
++ Samuraje (Śpiewakowski Aleksander) 
 
-Sarmaci (Sulimirski Tadeusz)
++ Sarmaci (Sulimirski Tadeusz)
 
 Scytowie (Smirnow Aleksiej)
 
@@ -327,7 +327,7 @@ Upadek Konstantynopola 1453 (Runciman Steven)
 
 Upadek Rzymu (Vogt Joseph) 
 
-W niebo wpatrzeni (Ley Willy) 
++ W niebo wpatrzeni (Ley Willy) 
 
 + W poszukiwaniu przodków człowieka (Łariczew Witalij)
 
