--- a/ceram.Rmd
+++ b/ceram.Rmd
@@ -115,7 +115,7 @@ Historia społeczna Anglii: Od Chaucera do Wiktorii (Trevelyan George Macaulay)
 
 Historia wychowania w starożytności (Marrou Henri Irenée)
 
-Hunowie (Thompson Edward Arthur)
++ Hunowie (Thompson Edward Arthur)
 
 + Huryci (Popko Maciej)
 
@@ -163,7 +163,7 @@ Lud faraonów: Od wieśniaka do dworzanina (Wilson Hilary)
 
 + Malarstwo etruskie (Dobrowolski Witold)
 
-Maorysi z Nowej Zelandii (Metge Joan) 
++ Maorysi z Nowej Zelandii (Metge Joan) 
 
 + Masynissa (Kotula Tadeusz)
 
@@ -183,7 +183,7 @@ Miłość w starożytnym Egipcie (Krzemińska Agnieszka)
 
 + Mity rzymskie (Grant Michael (1914-2004)) 
 
-Mity, rytuały i polityka Inków (Szemiński Jan, Ziółkowski Mariusz)  
++ Mity, rytuały i polityka Inków (Szemiński Jan, Ziółkowski Mariusz)  
 
 Młodsza Europa: Europa Środkowo-Wschodnia w kręgu cywilizacji chrześcijańskiej średniowiecza (Kłoczowski Jerzy) 
 
@@ -255,7 +255,7 @@ Religia starożytnych Egipcjan (Černý Jaroslav)
 
 Rosja: Dziedzictwo caratu i władzy radzieckiej (Acton Edward) 
 
-Rycerstwo (Keen Maurice)  
++ Rycerstwo (Keen Maurice)  
 
 + Rzym i świat śródziemnomorski do wojen punickich (Heurgon Jacques)
 
@@ -267,7 +267,7 @@ Rycerstwo (Keen Maurice)
 
 Scytowie (Smirnow Aleksiej)
 
-Seksualność w średniowiecznej Europie (Karras Ruth Mazo) 
++ Seksualność w średniowiecznej Europie (Karras Ruth Mazo) 
 
 Siedem cudów świata (Romer John, Romer Elizabeth)
 
