--- a/ceram.Rmd
+++ b/ceram.Rmd
@@ -343,7 +343,7 @@ Upadek Rzymu (Vogt Joseph)
 
 Wikingowie (Foote Peter Godfrey, Wilson David MacKenzie) 
 
-Wikingowie Pacyfiku (Buck Peter Henry) 
++ Wikingowie Pacyfiku (Buck Peter Henry) 
 
 + Wódz Słońca: Autobiografia D. C. Talayesvy, Indianina z plemienia Hopi (Talayesva Don, Simmons Leo)
 
