Zmiany w Rodowodach Cywilizacji 2018.09.04

--- a/ceram.Rmd
+++ b/ceram.Rmd
@@ -73,7 +73,7 @@ Człowiek i śmierć (Ariès Philippe)
 
 + Dawni Mongołowie (Kałużyński Stanisław)
 
-Dzieje chrześcijaństwa na Litwie (Ališauskas Vytautas, Baronas Darius, Paknys Mindaugas, Jovaiša Liudas, Raila Eligijus, Subačius Paulius, Streikus Arunas)
++ Dzieje chrześcijaństwa na Litwie (Ališauskas Vytautas, Baronas Darius, Paknys Mindaugas, Jovaiša Liudas, Raila Eligijus, Subačius Paulius, Streikus Arunas)
 
 Dzieje Cyganów (Fraser Angus)
 
@@ -325,7 +325,7 @@ Templariusze (Barber Malcolm)
 
 + Tybet: Zarys historii kultury (Snellgrove David, Richardson Hugh)
 
-Upadek Cesarstwa Rzymskiego na Zachodzie (Gibbon Edward) 
++ Upadek Cesarstwa Rzymskiego na Zachodzie (Gibbon Edward) 
 
 + Upadek Konstantynopola 1453 (Runciman Steven)
 
