--- a/ceram.Rmd
+++ b/ceram.Rmd
@@ -21,7 +21,7 @@ Arabowie (Danecki Janusz)
 
 Aztekowie: Próba interpretacji (Clendinnen Inga)
 
-Bliski Wschód od wypraw krzyżowych do 1517 roku (Holt Peter)
++ Bliski Wschód od wypraw krzyżowych do 1517 roku (Holt Peter)
 
 + Bogowie i Giganci: Powieść o ołtarzu pergameńskim (Stoll Heinrich Alexander) 
 
@@ -41,7 +41,7 @@ Cesarstwo Bizantyńskie (Browning Robert (1914-1997))
 
 Chiny: Zarys historii kultury (Fitzgerald Charles Patrick) 
 
-Chwala Polnocy (Henryk Litwin)
++ Chwala Polnocy (Henryk Litwin)
 
 Cień Minotaura (Ciechanowicz Jerzy)
 
@@ -89,7 +89,7 @@ Dzieje i kultura Hanzy (Schildhauer Johannes)
 
 Dzieje imperium perskiego (Olmstead A. T.)
 
-Dzieje Morza Czarnego (King Charles)
++ Dzieje Morza Czarnego (King Charles)
 
 + Dzieje Rzymu (Cary Max, Scullard Howard Hayes)
 
