--- a/art.Rmd
+++ b/art.Rmd
@@ -1,4 +1,8 @@
-### Archeologia i sztuka
+### Kultury starożytne i cywilizacje pozaeuropejskie 
+
+* Pierre du Bourguet Sztuka Koptów
+
+* Jadwiga Lipińska Sztuka egipska
 
 * Frederick Dockstader Sztuka Ameryki 1, 2
 
@@ -37,6 +41,8 @@
 * W. Tomkiewicz Rokoko
 
 ### Czarna seria
+
+* Jean-Pierre Babelon Sztuka hiszpańska
 
 * Andre Chastel Sztuka włoska
 
